rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax05/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A<T extends List<Boolean>> {
		static boolean m(T t) { 
			return false;
		} 
	}
}